--- a/_posts/2020-01-17-Test_Post.md
+++ b/_posts/2020-01-17-Test_Post.md
@@ -1,6 +1,6 @@
 ---
 layout: post
 author: Blake
-title: 1. Test Post 
+title: Test Post 
 ---
 Hello! This was week 1 of EECS 499. I'm going to treat this posts as a test post.
